--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,16 @@
 services:
   db:
-    image: postgres:17.0
+    image: mysql:8.0
     hostname: ${DB_HOST}
     ports:
-      - "5432:${DB_PORT}"
+      - "${DB_PORT:-3306}:3306"
     environment:
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_DB=${DB_NAME}
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+      - MYSQL_DATABASE=${DB_NAME}
+      - MYSQL_USER=${DB_USER}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - mysqldata:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password
 volumes:
-  pgdata:
+  mysqldata:
