--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:push": "drizzle-kit push",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:push": "node scripts/prisma-with-env.js db push",
+    "db:generate": "prisma generate",
+    "db:migrate": "node scripts/prisma-with-env.js migrate dev",
+    "db:studio": "node scripts/prisma-with-env.js studio"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.22",
@@ -18,7 +18,7 @@
     "@arcjet/next": "^1.0.0-beta.9",
     "@clerk/nextjs": "^6.26.0",
     "@hookform/resolvers": "^5.1.1",
-    "@humeai/voice-react": "^0.2.1",
+    "@prisma/client": "^5.20.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -33,12 +33,11 @@
     "ai": "^4.3.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.44.3",
-    "hume": "^0.12.1",
     "lucide-react": "^0.525.0",
+    "mysql2": "^3.11.5",
     "next": "15.4.2-canary.15",
     "next-themes": "^0.4.6",
-    "pg": "^8.16.3",
+    "openai": "^6.9.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
@@ -52,12 +51,11 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.2-canary.15",
+    "prisma": "^5.20.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
