--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "buildCommand": "npm run build",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"]
+  "regions": ["iad1"],
+  "env": {
+    "SKIP_ENV_VALIDATION": "true"
+  }
 }
 
